--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 releases/** filter=lfs diff=lfs merge=lfs -text
-img/** filter=lfs diff=lfs merge=lfs -text
+img/**/*.png filter=lfs diff=lfs merge=lfs -text
