--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 releases/** filter=lfs diff=lfs merge=lfs -text
 img/**/*.png filter=lfs diff=lfs merge=lfs -text
+doc_img/**/*.png filter=lfs diff=lfs merge=lfs -text
