--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,5 @@
 VCS = git
 style = pep440
 versionfile_source = bmstools/_version.py
-versionfile_build = 
+versionfile_build = bmstools/_version.py
 tag_prefix =
